added all css style

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- START HEADER SECTION -->
     <header id="main-header">
         <div class="container">
-        <h1>Welcome to my Website</h1>
+        <h1>Welcome To My Website</h1>
     </div>
     </header>
     <!-- END HEADER SECTION -->
@@ -31,7 +31,7 @@
     <!-- START SHOWCASE AREA -->
     <section id="showcase">
         <div class="container">
-            <h1>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam </h1>
+            <h1>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam Lorem ipsum dolor sit amet consectetur,  </h1>
         </div>
     </section>
     <!-- END SHOWCASE AREA -->
@@ -44,11 +44,13 @@
             <hr>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi illum doloremque, non quos quae, molestias ipsa qui iusto quidem fugit hic placeat rerum explicabo dolores!</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus ex quaerat inventore dolorem natus ipsa.</p>
+           
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
         </section> <!-- end main body  -->
 
         <!-- start side bar area -->
         <aside id="sidebar">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit quia rerum ullam nobis! Ullam maiores obcaecati mollitia nesciunt, veniam neque?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit quia rerum ullam nobis! Ullam maiores obcaecati mollitia nesciunt, veniam neque?Lorem ipsum dolor, sit amet consectetur</p>
         </aside>
         <!-- end side bar area -->
     </div>
