finished simple website design

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
     <!-- START HEADER SECTION -->
     <header id="main-header">
         <div class="container">
@@ -22,7 +23,7 @@
                 <li><a href="#">home</a></li>
                 <li><a href="#">about</a></li>
                 <li><a href="#">product</a></li>
-                <li><a href="#">contact</a></li>
+                <li><a href="#contact">contact</a></li>
             </ui>
         </div>
     </div>
@@ -44,7 +45,6 @@
             <hr>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi illum doloremque, non quos quae, molestias ipsa qui iusto quidem fugit hic placeat rerum explicabo dolores!</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus ex quaerat inventore dolorem natus ipsa.</p>
-           
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
         </section> <!-- end main body  -->
 
@@ -57,9 +57,11 @@
     <!-- end main body and side bar area -->
 
     <!-- start footer area  -->
+    <div class="contact">
     <footer id="main-footer">
         <p>Copyright &copy: Mahadi Hasan</p>
     </footer>
+    </div>      
     <!-- end footer area  -->
 
 </body>
